Bug fixed when play is pressed multiple time.

--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
   <script type="text/javascript" src="assets/libs/d3-tip.js"></script>
 
   <script type="text/javascript" src="assets/scripts/main.js"></script>
+  <script type="text/javascript" src="assets/scripts/force-chart.js"></script>
 </body>
 </html>
