Beeswarm is working with some overlaps...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="tabs">
     <ul class="header row">
       <li class="col active">Anomaly Detection Explorer</li>
-      <li class="col">Anomaly Scores Overview</li>
+      <li class="col">Incorrect Scores Explorer</li>
     </ul>
     <div class="content">
       <section class="tab visible" aria-label="Anomaly Detection Explorer">
@@ -66,7 +66,7 @@
         <svg id="video-player-svg"></svg>
       </section>
 
-      <section class="tab" aria-label="Anomaly Scores Overview">
+      <section class="tab" aria-label="Incorrect Scores Explorer">
         <!-- Select options -->
         <div class="row">
           <div class="label">Error type:</div>
