--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
           <svg id="bar-chart-svg"></svg>
           <hr>
           <h1>Region images</h1>
-          <h2 class="vertical">Appearance</h2>
-          <svg class="spacing" id="region-real-appear-svg"></svg>
-          <svg class="spacing" id="region-fake-appear-svg"></svg>
-          <h2 class="vertical">Motion</h2>
-          <svg class="spacing" id="region-real-motion-svg"></svg>
-          <svg class="spacing" id="region-fake-motion-svg"></svg>
+          <div class="form-group">
+            <h2>Past</h2>
+            <h2>Current</h2>
+          </div>
+          <h2 class="vertical">Inputs</h2>
+          <svg class="spacing" id="region-real-past-svg"></svg>
+          <svg class="spacing" id="region-real-curr-svg"></svg>
+          <h2 class="vertical">Next</h2>
+          <svg class="spacing" id="region-real-next-svg"></svg>
+          <svg class="spacing" id="region-fake-next-svg"></svg>
           <div class="form-group">
             <h2>Real</h2>
             <h2>Prediction</h2>
