--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <svg id="bar-chart-svg"></svg>
           <hr>
           <h1>Region images</h1>
-          <div class="form-group">
+          <div class="form-group-top">
             <h2>Past</h2>
             <h2>Current</h2>
           </div>
